--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "bun server.ts",
     "start:cli": "bun quipslop.tsx",
-    "start:web": "bun --hot server.ts"
+    "start:web": "bun --hot server.ts",
+    "start:stream": "bun ./scripts/stream-browser.ts live",
+    "start:stream:dryrun": "bun ./scripts/stream-browser.ts dryrun"
   },
   "devDependencies": {
     "@types/bun": "latest",
@@ -20,6 +22,7 @@
     "@openrouter/ai-sdk-provider": "^2.2.3",
     "ai": "^6.0.94",
     "ink": "^6.8.0",
+    "puppeteer": "^24.2.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4"
   }
