--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@openrouter/ai-sdk-provider": "^2.2.3",
     "ai": "^6.0.94",
+    "bun": "^1.3.9",
     "ink": "^6.8.0",
     "puppeteer": "^24.2.0",
     "react": "^19.2.4",
